tests/files/type_checker_tests/should_pass/095.cmdr
//Test constant set operation type checks
const x: int = 4;
